--- a/package.json
+++ b/package.json
@@ -15,15 +15,24 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "dayjs": "^1.10.4",
     "gatsby": "^3.2.1",
+    "gatsby-background-image": "^1.5.0",
     "gatsby-plugin-emotion": "^6.2.0",
     "gatsby-plugin-image": "^1.2.0",
+    "gatsby-plugin-mdx": "^2.2.0",
     "gatsby-plugin-sharp": "^3.2.0",
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
+    "mdx-utils": "^0.2.0",
+    "prism-react-renderer": "^1.2.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-markdown": "^5.0.3",
+    "react-syntax-highlighter": "^15.4.3"
   }
 }
